# WHFDL

./: .gitignore  CGMAIN.csv  Gastric Cancer Prediction Experimental evaluation.ipynb  README.md  WHFDLExplainability.ipynb  feature_selection.ipynb
.ipynb_checkpoints/: Gastric Cancer Prediction Experimental evaluation-checkpoint.ipynb
CWHFDL/: README.md  pyproject.toml
Data/: CGMAIN1.csv  data.csv
Example/: CWHFDL-example.py  FWHFDL-example.py
Experimental/.ipynb_checkpoints/: Gastric Cancer Prediction Experimental evaluation-checkpoint.ipynb
FWHFDL/: README.md  pyproject.toml
