[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "FWHFDL"
version = "0.0.2"
authors = [
  { name="Arman Daliri", email="daliriwork2@gmail.com" },
]
maintainers = [
  { name="Mohammad Mahdi Mir", email="standardret@proton.me" },
]
description = "WHFDL Feature Selector"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "scikit_learn"
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
source = "https://github.com/arman-daliri/WHFDL"
